--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -159,7 +159,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
 Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage density mediates light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
-This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; @poorterMetaanalysisPlantResponses2019b].
+This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b].
 
 The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers depend on sunflecks where receive 10-80% of their photon flux density for photosynthesis in short bursts within minutes of light exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy in inner canopy is a better proxy for light environment than height (Parker 1995).
 
@@ -174,7 +174,7 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower daytime maximum temperature and vapor pressure deficit ($VPD$), and warmer higher nighttime minimum temperature in the understory, respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$ [S. R. Hardwick et al. 2015, Junker et al. 2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. These pine forests have also been observed to maintain warmer nighttime understory temperatures than above canopy, due to radiative heat loss from the soil, caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [Junker et al. 2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower daytime maximum temperature and vapor pressure deficit ($VPD$), and warmer higher nighttime minimum temperature in the understory, respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015, Junker et al. 2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity and greater light permeability through canopies, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. These pine forests have also been observed to maintain warmer nighttime understory temperatures than above canopy, due to radiative heat loss from the soil, caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [Junker et al. 2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with higher maximum air temperatures and relative humidity in above forest canopies and gaps than in below canopies and understories. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
@@ -201,12 +201,9 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-*Topography and altitude contribute to the heterogeneity of forest light environment, and thus shape microclimates. Trees in higher altitudes have been observed to adapt their branching to allow for light to pass through subsequent canopy layers.  
-*Canopy structure and topography jointly constrain the microclimate of human-modified tropical landscapes. Global change biology, 24(11), pp.5243-5258] .See *Jucker et al. 2018 - max height was highly correlated to both LAI and surface roughness
-The strength of buffering also varies with respect to geographic and climatic factors.
-* Distance to coast, topographic position, elevation [@zellweger_seasonal_2019]
-* [@davis_microclimatic_2019]--Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperatures [@davis_microclimatic_2019]
-However vertical climate gradients within forests are known to be steeper than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a]
+With higher altitude and topography, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. *(do higher altitude forests have lower buffering capacity? due to open canopies?)* In a European silver birch forest, trees in higher altitude maintained open canopies with allowing more light through subsequent canopy layers, resulting in similar leaf traits across canopy positions, than in lower altitude trees [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Increased light permeability in higher altitude European sparse pine canopies, has also shown to increase understory light conditions along with higher maximum temperatures than lower altitude canopies, thus potentially having implications for seedling recruitment as temperatures rise [@vonarxSpatiotemporalEffectsForest2012a]. Vertical climate gradients are observed to be steeper within forests than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a]*what does this mean? can combine above sentences into one(N.V note)* Tree height in combination with topography modifies microclimate conditions. In a Boreneo forest, greater canopy height had a stronger influence on buffering temperature on east facing, wind-exposed slopes than on west-facing slopes.    
+  
+The strength of buffering also varies with respect to geographic and climatic factors. Distance to coast, topographic position, elevation [@zellweger_seasonal_2019]. Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperature extremes [@davis_microclimatic_2019]
 
 ## Leaf temperature 
 
@@ -242,9 +239,10 @@ Large leaves (with greater leaf width) can be significantly cooler than $T_{air}
 ### In-situ observations
 
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
-While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone. 
+While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
+In open-canopy pine forests, light permeating through canopy layers can influence understory leaf temperatures, such that even with understories maintaing $T_{air}$ lower than above canopy $T_{air}$, lower canopy $T_{leaf}$ can be substantially higher than above canopy, even in moist conditions [@mullerEvidenceEfficientNonevaporative2021, @martin_boundary_1999]  
 Under some conditions $T_{leaf}$ tracks  $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
-For instance, during the dry season in a tropical moist forest in Panama... (Rey-Sánchez et al. 2016). Sun leaves can also be  cooled relative to $T_{air}$ more than shade leaves (Rey-Sánchez et al. 2016). 
+For instance, during the dry season in a semi-decidudous tropical moist forest in Panama [@rey-sanchez_spatial_2016]. Sun leaves can also be  cooled relative to $T_{air}$ more than shade leaves [@rey-sanchez_spatial_2016]. 
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
@@ -261,7 +259,7 @@ At night when solar radiation is not a factor, differences in $T_{leaf}$ across 
 
 
 **Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [@rozendaalPlasticityLeafTraits2006].**
-After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
+After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
 
 
 
@@ -293,7 +291,7 @@ Height-based leaf trait variation in two tall temperate species, *Quercus alba* 
 - (Cavaleri et al. 2008) 
 - from Martijn: "If I remember correctly, height and light exposure are closely correlated and things like LMA scale with both, but above a certain level of light exposure, the effect of additional light disappears, while the relationship of the morphological traits with height continues. I have often been a bit skeptical about assuming height drives morphology, as most of the work that convincingly shows that (and relates it to turgor pressure for example) is from 100 m tall redwoods."
 - Elsa: see also H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009). -- LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light.
-
+- Beyond a certain height, height becomes more important than light in determing traits [Ambrose, Sillet, Cavaleri]
 
 #### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
 
@@ -308,7 +306,7 @@ Several studies point towards differences in leaf trait plasticity within-specie
 ### Intraspecific variation
 
 **Within a species, leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [@rozendaalPlasticityLeafTraits2006].**
-After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody ~~and herbaceous~~ species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
+After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
 A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. 
 Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
 
@@ -404,8 +402,9 @@ nocite: |
 ### Stomatal conductance
 Photosynthesis can be largely constrained by stomatal conductance. 
 
-- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015)
+- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015), however stomatal conductance limitation is also greater, and earlier with canopy height [Sanches et al. 2009] 
 Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
+-understory leaves open their stomata wider than upper canopy leaves [Kosugi et al. 2021]
 
 ### Photosynthesis
 
@@ -506,7 +505,7 @@ Additionally, increased exposure to light increases non structural carbon reserv
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
-Interaction between degrees of shade x ontogeny x height with rising temperature needs more scientific attention because a huge part of understory vegetation lies within variations of light and shade spatio-temporal gradient. 
+Interaction between degrees of shade x ontogeny x height with rising temperature needs more scientific attention because a huge part of understory vegetation lies within variations of light and shade spatio-temporal gradient. Leaf traits vary more on the basis on light environment than ontogenetically [REF]
 
 ![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020.  I'M NOT SURE THIS IS WHAT WE WANT, BUT I THINK SOME SORT OF TREE-RING FIGURE WOULD BE GOOD. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
