--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -240,9 +240,9 @@ Large leaves (with greater leaf width) can be significantly cooler than $T_{air}
 
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
 While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
-In open-canopy pine forests, light permeating through canopy layers can influence understory leaf temperatures, such that even with understories maintaing $T_{air}$ lower than above canopy $T_{air}$, lower canopy $T_{leaf}$ can be substantially higher than above canopy, even in moist conditions [@mullerEvidenceEfficientNonevaporative2021, @martin_boundary_1999]  
+In open-canopy needle-leaf forests, light permeating through canopy layers can influence understory leaf temperatures, such that even with understories maintaing $T_{air}$ lower than above canopy $T_{air}$, lower canopy $T_{leaf}$ can be substantially higher than above canopy, even in moist conditions [@mullerEvidenceEfficientNonevaporative2021, @martin_boundary_1999, @zweifelMiddayStomatalClosure2002]  
 Under some conditions $T_{leaf}$ tracks  $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
-For instance, during the dry season in a semi-decidudous tropical moist forest in Panama [@rey-sanchez_spatial_2016]. Sun leaves can also be  cooled relative to $T_{air}$ more than shade leaves [@rey-sanchez_spatial_2016]. 
+For instance, during the dry season in a semi-decidudous tropical moist forest in Panama [@rey-sanchez_spatial_2016]. Sun leaves can also be cooled relative to $T_{air}$ more than shade leaves [@rey-sanchez_spatial_2016]. 
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
@@ -505,7 +505,7 @@ Additionally, increased exposure to light increases non structural carbon reserv
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
-Interaction between degrees of shade x ontogeny x height with rising temperature needs more scientific attention because a huge part of understory vegetation lies within variations of light and shade spatio-temporal gradient. Leaf traits vary more on the basis on light environment than ontogenetically [REF]
+Interaction between degrees of shade x ontogeny x height with rising temperature needs more scientific attention because a huge part of understory vegetation lies within variations of light and shade spatio-temporal gradient. Leaf traits vary more on the basis on light environment than ontogenetically [@liuPlantSizeEffects2010]
 
 ![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020.  I'M NOT SURE THIS IS WHAT WE WANT, BUT I THINK SOME SORT OF TREE-RING FIGURE WOULD BE GOOD. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
