--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5055,6 +5055,25 @@
   number = {7}
 }
 
+@article{osullivanThermalLimitsLeaf2017,
+  title = {Thermal Limits of Leaf Metabolism across Biomes},
+  author = {O'sullivan, Odhran S. and Heskel, Mary A. and Reich, Peter B. and Tjoelker, Mark G. and Weerasinghe, Lasantha K. and Penillard, Aurore and Zhu, Lingling and Egerton, John J. G. and Bloomfield, Keith J. and Creek, Danielle and Bahar, Nur H. A. and Griffin, Kevin L. and Hurry, Vaughan and Meir, Patrick and Turnbull, Matthew H. and Atkin, Owen K.},
+  date = {2017},
+  journaltitle = {Global Change Biology},
+  volume = {23},
+  pages = {209--223},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.13477},
+  url = {http://www.onlinelibrary.wiley.com/doi/abs/10.1111/gcb.13477},
+  urldate = {2021-04-08},
+  abstract = {High-temperature tolerance in plants is important in a warming world, with extreme heat waves predicted to increase in frequency and duration, potentially leading to lethal heating of leaves. Global patterns of high-temperature tolerance are documented in animals, but generally not in plants, limiting our ability to assess risks associated with climate warming. To assess whether there are global patterns in high-temperature tolerance of leaf metabolism, we quantified Tcrit (high temperature where minimal chlorophyll a fluorescence rises rapidly and thus photosystem II is disrupted) and Tmax (temperature where leaf respiration in darkness is maximal, beyond which respiratory function rapidly declines) in upper canopy leaves of 218 plant species spanning seven biomes. Mean site-based Tcrit values ranged from 41.5 °C in the Alaskan arctic to 50.8 °C in lowland tropical rainforests of Peruvian Amazon. For Tmax, the equivalent values were 51.0 and 60.6 °C in the Arctic and Amazon, respectively. Tcrit and Tmax followed similar biogeographic patterns, increasing linearly (˜8 °C) from polar to equatorial regions. Such increases in high-temperature tolerance are much less than expected based on the 20 °C span in high-temperature extremes across the globe. Moreover, with only modest high-temperature tolerance despite high summer temperature extremes, species in mid-latitude ( 20–50°) regions have the narrowest thermal safety margins in upper canopy leaves; these regions are at the greatest risk of damage due to extreme heat-wave events, especially under conditions when leaf temperatures are further elevated by a lack of transpirational cooling. Using predicted heat-wave events for 2050 and accounting for possible thermal acclimation of Tcrit and Tmax, we also found that these safety margins could shrink in a warmer world, as rising temperatures are likely to exceed thermal tolerance limits. Thus, increasing numbers of species in many biomes may be at risk as heat-wave events become more severe with climate change.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.13477},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JTI5P9ED\\O'sullivan et al. - 2017 - Thermal limits of leaf metabolism across biomes.pdf;C\:\\Users\\Me\\Zotero\\storage\\V3QFK6CF\\O'Sullivan et al. 2017.pdf;C\:\\Users\\Me\\Zotero\\storage\\D5A7YNZU\\gcb.html},
+  keywords = {heat waves,high-temperature tolerance,latitudinal patterns,photosynthesis,respiration,Tcrit,temperature extremes,Tmax},
+  langid = {english},
+  number = {1}
+}
+
 @online{OverstoryStructureTopographic,
   title = {Overstory Structure and Topographic Gradients Determining Diversity and Abundance of Understory Shrub Species in Temperate Forests in Central {{Pyrenees}} ({{NE Spain}}) | {{Request PDF}}},
   doi = {10.1016/j.foreco.2007.01.056},
@@ -7156,19 +7175,6 @@
   keywords = {drought,genotype,growth,heat stress,photosynthesis,respiration,stomatal conductance},
   langid = {english},
   number = {9}
-}
-
-@online{ThermalLimitsLeaf,
-  title = {Thermal Limits of Leaf Metabolism across Biomes - {{O}}'sullivan - 2017 - {{Global Change Biology}} - {{Wiley Online Library}}},
-  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1111/gcb.13477},
-  urldate = {2021-02-22}
-}
-
-@online{ThermalLimitsLeafa,
-  title = {Thermal Limits of Leaf Metabolism across Biomes - {{O}}'sullivan - 2017 - {{Global Change Biology}} - {{Wiley Online Library}}},
-  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1111/gcb.13477},
-  urldate = {2021-02-22},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\5FSENILK\\gcb.html}
 }
 
 @online{ThermalLimitsLeafb,
