--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -579,6 +579,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\PRKSZLZ4\\183.html}
 }
 
+@article{biramiHeatWavesAlter2018,
+  title = {Heat {{Waves Alter Carbon Allocation}} and {{Increase Mortality}} of {{Aleppo Pine Under Dry Conditions}}},
+  author = {Birami, Benjamin and Gattmann, Marielle and Heyer, Arnd G. and Grote, Rüdiger and Arneth, Almut and Ruehr, Nadine K.},
+  date = {2018},
+  journaltitle = {Frontiers in Forests and Global Change},
+  volume = {1},
+  pages = {undefined-undefined},
+  issn = {2624-893X},
+  doi = {10.3389/ffgc.2018.00008},
+  url = {https://www.mendeley.com/catalogue/b191923b-f8b7-37b9-838f-56b1f5f28640/},
+  urldate = {2021-04-08},
+  abstract = {(2018) Birami et al. Frontiers in Forests and Global Change. Climate extremes are likely to occur more frequently in the future, including a combination of heat waves and drought. However, the resp...},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QS4UPE5C\\Birami et al. - 2018 - Heat Waves Alter Carbon Allocation and Increase Mo.pdf;C\:\\Users\\Me\\Zotero\\storage\\UP85PJ7N\\b191923b-f8b7-37b9-838f-56b1f5f28640.html},
+  langid = {british}
+}
+
 @article{blanchardContrastedAllometriesStem2016,
   title = {Contrasted Allometries between Stem Diameter, Crown Area, and Tree Height in Five Tropical Biogeographic Areas},
   author = {Blanchard, Elodie and Birnbaum, Philippe and Ibanez, Thomas and Boutreux, Thomas and Antin, Cécile and Ploton, Pierre and Vincent, Grégoire and Pouteau, Robin and Vandrot, Hervé and Hequet, Vanessa and Barbier, Nicolas and Droissart, Vincent and Sonké, Bonaventure and Texier, Nicolas and Kamdem, Narcisse Guy and Zebaze, Donatien and Libalah, Moses and Couteron, Pierre},
